--- a/css/style.css
+++ b/css/style.css
@@ -293,14 +293,14 @@ nav {
 }
 
 .social-media li {
-  background: #f5f5f5;
-  display: inline-flex;
-  padding: 10px;
-  border-radius: 50%;
+  background-color: #f5f5f5;
+  border-radius: 10%;
   cursor: pointer;
+  padding: 8%;
   opacity: 0;
   transition: all .3s ease-in;
 }
+
 
 .social-media li svg {
   width: var(--large-font-size);
@@ -376,6 +376,7 @@ nav {
   width: 30px;
   height: 30px;
   color: var(--text-bright);
+  fill: var(--text-bright);
 }
 
 .featured_info {
