--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,6 @@ nav {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   column-gap: 1rem;
   row-gap: 1rem;
 }
@@ -312,6 +311,7 @@ nav {
   background-color: var(--text-bright);
   border-radius: 5px;
   text-align: center;
+  width: calc(25% - 12px);
 }
 
 #book-title {
@@ -483,6 +483,9 @@ nav {
   .featured_info p {
     line-height: 15px;
     font-size: 30px;
+  }
+  .cardBox-item {
+    width: calc(50% - 12px);
   }
 }
 
