--- a/css/style.css
+++ b/css/style.css
@@ -283,8 +283,6 @@ nav {
 }
 
 .social-media {
-  display: flex;
-  justify-content: space-between;
   width: 100%;
   padding: 0 1rem;
   transform: translateY(-6em);
@@ -292,18 +290,21 @@ nav {
 }
 
 .social-media li {
-  background-color: #f5f5f5;
-  border-radius: 10%;
-  cursor: pointer;
-  padding: 8%;
   opacity: 0;
   transition: all .3s ease-in;
 }
 
+.social-media li button {
+  background-color: var(--primary-color);
+  border-radius: 10%;
+  margin: 3%;
+  padding: 8%;
+  cursor: pointer;
+}
 
 .social-media li svg {
   width: var(--large-font-size);
-  fill: var(--primary-color);
+  fill: var(--text-bright);
 }
 
 .cardBox-item {
@@ -327,7 +328,7 @@ nav {
 }
 
 .bookItem:hover h2, .bookItem:hover span {
-  filter: blur(3px);
+  filter: blur(5px);
   transition: .5s;
 }
 
