add keyframes & toast msg

--- a/css/template.css
+++ b/css/template.css
@@ -132,6 +132,48 @@ input[type=text], input[type=number], .btn-submit:focus {
   cursor: pointer;
 }
 
+#toastMessage {
+  visibility: hidden;
+  min-width: 250px;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  bottom: 30px;
+  background-color: var(--btn-glow-color);
+  border-left: 8px solid var(--primary-color);
+  font-size: var(--normal-font-size);
+  right: 10px;
+}
+
+#toastMessage.showToast {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;} 
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;} 
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
 @media screen and (max-width: 768px) {
   .form-content {
     max-width: 100%;
