--- a/css/template.css
+++ b/css/template.css
@@ -142,8 +142,8 @@ input[type=text], input[type=number], .btn-submit:focus {
   position: fixed;
   z-index: 1;
   bottom: 30px;
-  background-color: var(--btn-glow-color);
-  border-left: 8px solid var(--primary-color);
+  background-color: var(--primary-color);
+  border-left: 8px solid var(--btn-hover-color);
   font-size: var(--normal-font-size);
   right: 10px;
 }
